--- a/index.html
+++ b/index.html
@@ -158,39 +158,45 @@
                 </div>
             </section>
             <section id="works">
-                <div class="d-flex h-100">
-                    <div id="first-part" class="w-100 w-md-50">
-                        <div class="h-50 d-flex">
-                            <div class="w-50">
+                <div class="container-fluid h-100 m-0 p-0">
+                    <div class="row d-flex mr-0">
+                        <div class="d-flex col-12 col-sm-6 col-md-3 p-0">
+                            <div class="">
                                 <img class="h-100 w-100" src="assets/images/work/photo1.jpg" alt="">
                             </div>
-                            <div class="w-50">
+                        </div>
+                        <div class="d-flex col-12 col-sm-6 col-md-3 p-0">
+                            <div class="">
                                 <img class="h-100 w-100" src="assets/images/work/photo2.jpg" alt="">
                             </div>
                         </div>
-                        <div class="h-50 d-flex">
-                            <div class="w-50">
-                                <img class="h-100 w-100" src="assets/images/work/photo5.jpg" alt="">
-                            </div>
-                            <div class="w-50">
-                                <img class="h-100 w-100" src="assets/images/work/photo6.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div id="second-part" class="w-100 w-md-50">
-                        <div class="h-50 d-flex">
-                            <div class="w-50">
+                        <div class="d-flex col-12 col-sm-6 col-md-3 p-0">
+                            <div class="">
                                 <img class="h-100 w-100" src="assets/images/work/photo3.jpg" alt="">
                             </div>
-                            <div class="w-50">
+                        </div>
+                        <div class="d-flex col-12 col-sm-6 col-md-3 p-0">
+                            <div class="">
                                 <img class="h-100 w-100" src="assets/images/work/photo4.jpg" alt="">
                             </div>
                         </div>
-                        <div class="h-50 d-flex">
-                            <div class="w-50">
+                        <div class="d-flex col-12 col-sm-6 col-md-3 p-0">
+                            <div class="">
+                                <img class="h-100 w-100" src="assets/images/work/photo5.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="d-flex col-12 col-sm-6 col-md-3 p-0">
+                            <div class="">
+                                <img class="h-100 w-100" src="assets/images/work/photo6.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="d-flex col-12 col-sm-6 col-md-3 p-0">
+                            <div class="">
                                 <img class="h-100 w-100" src="assets/images/work/photo7.jpg" alt="">
                             </div>
-                            <div class="w-50">
+                        </div>
+                        <div class="d-flex col-12 col-sm-6 col-md-3 p-0">
+                            <div class="">
                                 <img class="h-100 w-100" src="assets/images/work/photo8.jpg" alt="">
                             </div>
                         </div>
